calcul et liste des commandes
